[package]
name = "spark-cli"
version = "10.5.5"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
fdlimit = "0.3.0"
tokio = { version = "1.52.1", features = ["full"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "local-time"] }
spark = { path = "../spark", default-features = false, features = ["clap"] }

tikv-jemallocator = { version = "0.6", optional = true }

[features]
default = ["aws-lc-rs"]
jemalloc = ["dep:tikv-jemallocator"]
aws-lc-rs = ["spark/aws-lc-rs"]
ring = ["spark/ring"]
aws-lc-rs-bindgen = ["spark/aws-lc-rs-bindgen"]

[[bin]]
name = "spark"
path = "src/main.rs"
